added more fixes